Skip non-text svg elements in Most{For/Back}wardCaretPosition

There is no caret position in non-text svg elements. Hence, this patch
skips such elements in the two functions for performance optimization.

Bug: 822312
Change-Id: I74321aa328315f6afb5372de53696bf87cef518b
Reviewed-on: https://chromium-review.googlesource.com/977578
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545391}
Former-commit-id: 8e793a18ec6358414ffc337b336c93d4f6061c91